--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -14,7 +14,7 @@
 }
 
 
-.main > div > input{
+.main > form > input{
     border-radius: 4px;
     width:400px;
     height: 30px;
@@ -23,7 +23,7 @@
     outline: none;
     padding: 5px;
 }
-.main > div > button{
+.main > form > button{
     outline: none;
     border: 1px solid rgb(34, 34, 73);
     padding: 12px;
@@ -31,10 +31,10 @@
     cursor: pointer;
     background-color: rgb(122, 122, 179);
 }
-.main > div > button:active{
+.main > form > button:active{
     transform: scale(0.9);
 }
-.main > div > input[type='text']:focus{
+.main > form > input[type='text']:focus{
     border-color: aqua;
 
 }
